agrego Okta Sec

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size = 10MB
 spring.servlet.multipart.max-request-size = 10MB
 Server.tomcat.max-swallow-size = 20MB
+okta.oauth2.client-id=0oa1fcj37qMioKItg5d7
+okta.oauth2.client-secret=RUl5YJlKBpDLhBQ2rShxVVlC_DP5rDg_9Z0kzvz5
+okta.oauth2.issuer=https://dev-24741685.okta.com/oauth2/default
